# testc

./: CMakeLists.txt  steps.txt
glad/include/glad/: glad.h
glad/src/: glad.c
t1_create_window/: CMakeLists.txt  main.c
t2_triangle/: CMakeLists.txt  main.c
t3_shapes/: CMakeLists.txt  main.c  shape.h
t4_index_buffer/: CMakeLists.txt  main.c  shape.h
t5_batch_render/: CMakeLists.txt  glfw_utils.h  main.c  math.h  render.h  shape.h
t6_dynamic_render/: CMakeLists.txt  main.c  math2d.h  render.h  shape.h
